--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p>Test for git</p>
+    <p>2nd test for git</p>
+    <p>3rd test for git</p>
 <p>This is my first website</p>
 <h1 class="addcar">My name is Sizwan</h1>
 <h1 style="color: blue;">I live in Tongi</h1>
